[workspace]
members = [
    "sh-media",
    "sh-fmp4",
    "sh-ingest-rtmp",
    "sh-transport-mse",
    "qw-site-doc-gen",
    "qw-site",
    "qw-ingest",
    "qw-proto",
]

[patch.crates-io]
av-codec = { git = "https://github.com/rust-av/rust-av" }
av-data = { git = "https://github.com/rust-av/rust-av" }
av-format = { git = "https://github.com/rust-av/rust-av" }
av-bitstream = { git = "https://github.com/rust-av/rust-av" }
