[workspace]
members = [
    "libs/sh-media",
    "libs/sh-fmp4",
    "libs/sh-ingest-rtmp",
    "libs/sh-transport-mse",
    "libs/qw-site-doc-gen",
    "libs/qw-proto",
    "qw-site",
    "qw-ingest",
]

[patch.crates-io]
av-codec = { git = "https://github.com/rust-av/rust-av" }
av-data = { git = "https://github.com/rust-av/rust-av" }
av-format = { git = "https://github.com/rust-av/rust-av" }
av-bitstream = { git = "https://github.com/rust-av/rust-av" }
