[workspace]
members = [
    "libs/sh-media",
    "libs/sh-fmp4",
    "libs/sh-ingest-rtmp",
    "libs/sh-transport-mse",
    "libs/qw-site-doc-gen",
    "libs/qw-proto",
    "qw-site",
    "qw-ingest",
]
resolver = "2"

[patch.crates-io]
av-data = { git = "https://github.com/rust-av/rust-av" }
av-format = { git = "https://github.com/rust-av/rust-av" }
