[package]
edition = "2021"
name = "qwer"
version = "0.3.1"
build = "build.rs"
license = "AGPL-3.0-only"
description = ""

[dependencies]
axum = { version = "0.4", features = ["headers"] }
askama = "0.11"
hyper = "0.14.16"
anyhow = "1.0.52"
tokio = { version = "1.15.0", features = ["full"] }
tower-http = { version = "0.2", features = ["fs", "trace", "auth"] }
tonic = { version = "0.6.2", features = ["tls", "compression"] }

async-trait = "0.1.52"
futures = "0.3.19"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }

dotenv = "0.15.0"
time = "0.3"

backoff = { version = "0.3", features = ["tokio"] }
tokio-postgres = "0.7"
bb8 = "0.7"
bb8-postgres = "0.7"
refinery = { version = "0.8.4", features = ["tokio-postgres"] }
# sqlx = { version = "0.5", features = ["time", "sqlite", "runtime-tokio-rustls"] }
qw-proto = { path = "../libs/qw-proto" }
lettre = { version = "0.10.0-rc.4", default-features = false, features = ["smtp-transport", "hostname", "builder", "pool", "rustls-tls"] }
fastrand = "1.6.0"
ascii = "1.0.0"
serde = "1.0.133"
argon2 = { version = "0.3.2", features = ["std"] }
cookie = { version = "0.16.0", features = ["secure", "percent-encode"] }
rand = "0.8"
headers = "0.3.5"
bytesize = "1.1"

[build-dependencies]
qw-doc-gen = { path = "../libs/qw-site-doc-gen" }
