[package]
name = "sh-fmp4"
version = "0.1.0"
edition = "2021"

[dependencies]
sh-media = { path = "../sh-media" }
av-mp4 = { git = "https://github.com/Jokler/av-mp4", branch = "add-audio" }
# fmp4 = { path = "../fmp4" }
async-trait = "0.1"
bytes = "1.0"
anyhow = "1.0"
log = "0.4"
chrono = "0.4"
tracing = "0.1"