[package]
name = "sh-ingest-rtmp"
version = "0.1.0"
edition = "2021"

[dependencies]
sh-media = { path = "../sh-media" }
# fmp4 = { path = "../fmp4" }
av-mp4 = { git = "https://github.com/Jokler/av-mp4", branch = "add-audio" }
av-format = { git = "https://github.com/rust-av/rust-av" }

async-trait = "0.1"
anyhow = "1.0"
failure = "*"
thiserror = "*"
futures = "0.3"
bytes = "1.0"
h264-reader = { git = "https://github.com/fkaa/h264-reader" } # "0.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

flvparse = "0.1"
rml_rtmp = "0.6"
# stop-token = { git = "https://github.com/soruh/stop-token" }