[package]
name = "sh-media"
version = "0.1.0"
authors = ["Felix Kaaman <tmtu@tmtu.ee>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
bytesize = "1.1"
async-channel = "1.6"
async-trait = "0.1"
e-ring = "0.3"
anyhow = "1.0"
chrono = "0.4"
gcd = "2.0"
bytes = "1.0"
h264-reader = "0.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"